Fix collapsed comment state

--- a/src/definitions/views/comment.less
+++ b/src/definitions/views/comment.less
@@ -197,7 +197,8 @@
 *******************************/
 
 .ui.collapsed.comments,
-.ui.comments .collapsed.comments {
+.ui.comments .collapsed.comments,
+.ui.comments .collapsed.comment {
   display: none;
 }
 
